bk_ida/gccida/c1/pushdecl
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushdecl/src/c-decl.c:2651:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *size_unit; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushdecl/src/c-decl.c:2654:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushdecl/src/c-decl.c:2659:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushdecl/src/c-decl.c:2889:22: error: expected expression
v27 = *( tree_node **)( v23 + 104); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushdecl/src/c-decl.c:2889:10: error: use of undeclared identifier 'tree_node'
v27 = *( tree_node **)( v23 + 104); 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushdecl/src/c-decl.c:2903:22: error: expected expression
v32 = *( tree_node **)( v23 + 8); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushdecl/src/c-decl.c:2903:10: error: use of undeclared identifier 'tree_node'
v32 = *( tree_node **)( v23 + 8); 
         ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushdecl/src/obj/c-decl.o] Error 1
